--- a/html/css/scrolling-nav.css
+++ b/html/css/scrolling-nav.css
@@ -45,7 +45,7 @@ of those sections to manage the look and feel of the site. */
     background: #eee;
 }
 
-.services-section {
+.faq-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
