--- a/html/css/scrolling-nav.css
+++ b/html/css/scrolling-nav.css
@@ -60,6 +60,10 @@ of those sections to manage the look and feel of the site. */
     text-align: left;
 }
 
+dt {
+    padding-top: 1em;
+}
+
 .contact-section {
     height: 100%;
     padding-top: 150px;
