--- a/html/css/scrolling-nav.css
+++ b/html/css/scrolling-nav.css
@@ -39,21 +39,21 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    /* background: #fff; */
 }
 
 .about-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    /* background: #eee; */
 }
 
 .faq-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    /* background: #fff; */
 }
 
 .col-lg-12 {
@@ -68,5 +68,5 @@ dt {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    /* background: #eee; */
 }
